# ai-critic

./: .aicritic-policy.yaml.example  .env.example  .gitignore  .pre-commit-hooks.yaml  FEATURES.md  README.md  aicritic-init.sh  aicritic.py  aicritic_executive_slide.pptx  config.py  generate_slide.py  index.html  patterns_config.py  policy.py  project_config.py  pyproject.toml  requirements.txt  server.py
.github/workflows/: aicritic.yml
agent/: loop.py  session.py  tools.py
benchmarks/: README.md  ground_truth.json  run.py
copilot/: audit.py  auth.py  parser.py  streamer.py
demo/: api.py  auth.py  utils.py
inputs/: complexity.py  git_diff.py  loader.py  suppression.py
pipeline/: __init__.py  analyst.py  batching.py  checker.py  critic.py  explainer.py  fixer.py  pattern_advisor.py  result_cache.py  test_generator.py
report/: baseline.py  formatter.py  notify.py  pr.py  sarif.py
roles/: analyst.md  checker.md  critic.md  fixer.md
runbooks/: agent.md  ci-cd.md  cli.md  copilot-extension.md  org-deployment.md  quickstart.md
tools/code_coverage/: analyst.md  checker.md  critic.md
tools/dependency_audit/: analyst.md  checker.md  critic.md
tools/design_review/: analyst.md  checker.md  critic.md  fixer.md
tools/dockerfile_review/: analyst.md  checker.md  critic.md  fixer.md
tools/error_handling/: analyst.md  checker.md  critic.md
tools/iac_review/: analyst.md  checker.md  critic.md  fixer.md
tools/migration_safety/: analyst.md  checker.md  critic.md  fixer.md
tools/performance/: analyst.md  checker.md  critic.md
tools/pr_review/: analyst.md  (+2 more)
(+11 files in other folders)
