[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "aicritic"
version = "0.1.0"
description = "Multi-LLM code critic — Sonnet → Gemini → Opus"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "rich>=13.0.0",
    "httpx>=0.24.0",
]

[project.scripts]
aicritic = "aicritic:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aicritic*", "pipeline*", "inputs*", "report*", "copilot*", "agent*", "tools*"]
